@@ -110,6 +110,7 @@ ANNOT_EVIDENCECODE=IEA
 ANNOT_EDITOR=uniprotload
 ANNOT_DATE=`date '+%m/%d/%Y'`
 ANNOT_NOTE="gene product:"
+ANNOT_NOTEPREFIX="UniProtKB:"
 
 GO_EC_ASSOC_FILE=${OUTPUTDIR}/go_ec_annot.txt
 GO_EC_ANNOT_REF=J:72245
@@ -123,7 +124,7 @@ GO_SPKW_ANNOT_REF=J:60000
 MARKER_IP_ASSOC_FILE=${OUTPUTDIR}/marker_ip_annot.txt
 MARKER_IP_ANNOT_REF=J:53168
 
-export ANNOTLOADER_CSH ANNOT_EVIDENCECODE ANNOT_EDITOR ANNOT_DATE ANNOT_NOTE
+export ANNOTLOADER_CSH ANNOT_EVIDENCECODE ANNOT_EDITOR ANNOT_DATE ANNOT_NOTE ANNOT_NOTEPREFIX
 export GO_EC_ASSOC_FILE GO_EC_ANNOT_REF 
 export GO_IP_ASSOC_FILE GO_IP_ANNOT_REF
 export GO_SPKW_ASSOC_FILE GO_SPKW_ANNOT_REF
